add: add header, main-content, and footer

--- a/index.html
+++ b/index.html
@@ -8,6 +8,17 @@
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body>
-    <h1 class="text-slate-500">Hello World</h1>
+    <head>
+        <h1>Sport Store</h1>
+        <nav>
+            <input type="text" placeholder="search products...">
+        </nav>
+    </head>
+    <main>
+        <h1>main</h1>
+    </main>
+    <footer>
+        <p>&copy;copyright 2022 by Sport Store</p>
+    </footer>
 </body>
 </html>
