style: add styling to header

--- a/index.html
+++ b/index.html
@@ -6,15 +6,34 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sport Store</title>
     <script src="https://cdn.tailwindcss.com"></script>
+    <script>
+        tailwind.config = {
+          theme: {
+            extend: {
+              colors: {
+                clifford: '#38A4FE',
+              }
+            }
+          }
+        }
+    </script>
 </head>
 <body>
-    <head>
-        <h1>Sport Store</h1>
+    <header 
+        class="w-full h-20 border-b border-slate-400 grid grid-cols-[max-content_1fr] gap-10 items-center px-10">
+        <h1 class="text-2xl font-bold">Sport Store</h1>
         <nav>
-            <input type="text" placeholder="search products...">
+            <input 
+                class="w-3/4 border border-slate-500 text-sm px-3 py-1.5 rounded-md focus:outline-none focus:border focus:border-sky-500 focus:ring-1 focus:ring-sky-500 focus:text-slate-500"
+                type="text"
+                placeholder="search products...">
+            <button 
+                class="bg-clifford px-3 text-sm font-medium py-[0.495rem] -ml-[70px] rounded-r-md text-white hover:bg-sky-600">
+                Search
+            </button>
         </nav>
-    </head>
-    <main>
+    </header>
+    <main class="bg-blue">
         <h1>main</h1>
     </main>
     <footer>
