--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
        theme: {
          extend: {
            colors: {
-             clifford: '#38A4FE',
+             customcolor: '#38A4FE',
            }
          }
        }
@@ -28,17 +28,21 @@
              type="text"
              placeholder="search products...">
          <button
-             class="search-button bg-clifford px-3 text-sm font-medium py-[0.495rem] -ml-[70px] rounded-r-md text-white hover:bg-sky-600">
+             class="search-button bg-customcolor px-3 text-sm font-medium py-[0.495rem] -ml-[70px] rounded-r-md text-white hover:bg-sky-600">
              Search
          </button>
      </nav>
  </header>
- <main>
-     <div class="jumbotron">
-         <img src="assets/images/hero.png">
-         <div>
-            <h1>Find & Buy Your Best <span>Equipments</span></h1>
-            <button>Get Now</button>
+ <main class="px-24 py-10">
+     <div class="jumbotron h-80 bg-customcolor grid grid-cols-2 rounded-2xl p-6 overflow-hidden">
+         <img class="w-5/6 order-2 mt-8" src="assets/images/hero.png">
+         <div class="px-10 py-8">
+            <h1 class="text-5xl font-bold text-white leading-snug">
+               Find & Buy Your Best <span class="block">Equipments</span>
+            </h1>
+            <button class="bg-white px-8 text-sm py-2.5 rounded-md mt-10 font-medium text-customcolor hover:bg-slate-100">
+               Get Now
+            </button>
          </div>
      </div>
      
