add: add product categories

--- a/index.html
+++ b/index.html
@@ -19,36 +19,64 @@
  </script>
 </head>
 <body>
- <header 
-     class="w-full h-20 border-b border-slate-400 grid grid-cols-[max-content_1fr] gap-10 items-center px-10">
-     <h1 class="text-2xl font-bold">Sport Store</h1>
-     <nav>
+   <header
+      class="w-full h-20 border-b border-slate-400 grid grid-cols-[max-content_1fr] gap-10 items-center px-10">
+      <h1 class="text-2xl font-bold">Sport Store</h1>
+
+      <nav>
          <input 
-             class="search-input w-3/4 border border-slate-500 text-sm px-3 py-1.5 rounded-md focus:outline-none focus:border focus:border-sky-500 focus:ring-1 focus:ring-sky-500 focus:text-slate-500"
-             type="text"
-             placeholder="search products...">
+            class="search-input w-3/4 border border-slate-500 text-sm px-3 py-1.5 rounded-md focus:outline-none focus:border focus:border-sky-500 focus:ring-1 focus:ring-sky-500 focus:text-slate-500"
+               type="text"
+               placeholder="search products...">
          <button
-             class="search-button bg-customcolor px-3 text-sm font-medium py-[0.495rem] -ml-[70px] rounded-r-md text-white hover:bg-sky-600">
-             Search
+            class="search-button bg-customcolor px-3 text-sm font-medium py-[0.495rem] -ml-[70px] rounded-r-md text-white hover:bg-sky-600">
+            Search
          </button>
-     </nav>
- </header>
- <main class="px-24 py-10">
-     <div class="jumbotron h-80 bg-customcolor grid grid-cols-2 rounded-2xl p-6 overflow-hidden">
+      </nav>
+   </header>
+
+   <main class="px-24 py-10">
+      <div class="jumbotron h-80 bg-customcolor grid grid-cols-2 rounded-2xl p-6 overflow-hidden">
          <img class="w-5/6 order-2 mt-8" src="assets/images/hero.png">
+
          <div class="px-10 py-8">
             <h1 class="text-5xl font-bold text-white leading-snug">
                Find & Buy Your Best <span class="block">Equipments</span>
             </h1>
+
             <button class="bg-white px-8 text-sm py-2.5 rounded-md mt-10 font-medium text-customcolor hover:bg-slate-100">
                Get Now
             </button>
          </div>
-     </div>
-     
- </main>
- <footer>
-     <p>&copy;copyright 2022 by Sport Store</p>
- </footer>
+      </div>
+      
+      <div class="categories">
+         <h2>categories</h2>
+         <ul class="category-list">
+            <li>
+               <a href="">shoes</a>
+            </li>
+            <li>
+               <a href="">jersey</a>
+            </li>
+            <li>
+               <a href="">jacket</a>
+            </li>
+            <li>
+               <a href="">equipments</a>
+            </li>
+            <li>
+               <a href="">merchandies</a>
+            </li>
+         </ul>
+         <div class="product-list">
+            <h1>product list</h1>
+         </div>
+      </div>
+   </main>
+
+   <footer>
+      <p>&copy;copyright 2022 by Sport Store</p>
+   </footer>
 </body>
 </html>
