fetch: fetching data from data.json and update product list

--- a/index.html
+++ b/index.html
@@ -85,33 +85,33 @@
          <h2 class="text-xl font-medium capitalize">Kategori</h2>
 
          <!-- daftar kategori -->
-         <ul class="category-list flex justify-evenly mt-3 flex-wrap space-x-3">
+         <ul class="category-list flex md:justify-evenly mt-3 flex-wrap md:space-x-3">
             <li 
-               class="shoes bg-white border-2 border-slate-400 py-1.5 px-1 w-32 lg:flex-1 lg:text-sm mb-3 rounded-md hover:border-customcolor hover:cursor-pointer flex items-center justify-center space-x-2 text-xs">
+               class="shoes bg-white border-2 border-slate-400 py-1.5 px-1 w-full sm:w-32 space-x-2 lg:flex-1 lg:text-sm mb-3 rounded-md hover:border-customcolor hover:cursor-pointer flex items-center justify-center space-x-2 text-xs">
                <img class="max-w-4 max-h-4" src="assets/icons/shoes-icon.png">
                <span>sepatu</span>
             </li>
 
             <li 
-               class="jersey bg-white text-xs border-2 border-slate-400 py-1.5 px-1 w-32 lg:flex-1 lg:text-sm mb-3 rounded-md hover:border-customcolor hover:cursor-pointer flex items-center justify-center space-x-2">
+               class="jersey bg-white text-xs border-2 border-slate-400 py-1.5 px-1 w-full sm:w-32 space-x-2 lg:flex-1 lg:text-sm mb-3 rounded-md hover:border-customcolor hover:cursor-pointer flex items-center justify-center space-x-2">
                <img class="max-w-4 max-h-4" src="assets/icons/jersey-icon.png">
                <span>jersey</span>
             </li>
 
             <li 
-               class="jacket bg-white text-xs border-2 border-slate-400 py-1.5 px-1 w-32 lg:flex-1 lg:text-sm mb-3 text-center rounded-md hover:border-customcolor hover:cursor-pointer flex items-center justify-center space-x-2">
+               class="jacket bg-white text-xs border-2 border-slate-400 py-1.5 px-1 w-full sm:w-32 space-x-2 lg:flex-1 lg:text-sm mb-3 text-center rounded-md hover:border-customcolor hover:cursor-pointer flex items-center justify-center space-x-2">
                <img class="max-w-4 max-h-4" src="assets/icons/jacket-icon.png">
                <span>jaket</span>
             </li>
 
             <li 
-               class="equipments bg-white text-xs border-2 border-slate-400 py-1.5 px-1 w-32 lg:flex-1 lg:text-sm mb-3 text-center rounded-md hover:border-customcolor hover:cursor-pointer flex items-center justify-center space-x-2">
+               class="equipments bg-white text-xs border-2 border-slate-400 py-1.5 px-1 w-full sm:w-32 space-x-2 lg:flex-1 lg:text-sm mb-3 text-center rounded-md hover:border-customcolor hover:cursor-pointer flex items-center justify-center space-x-2">
                <img class="max-w-4 max-h-4" src="assets/icons/equipment-icon.png">
                <span>alat olahraga</span>
             </li>
 
             <li 
-               class="merchandies bg-white text-xs border-2 border-slate-400 py-1.5 px-1 w-32 lg:flex-1 lg:text-sm mb-3 text-center rounded-md hover:border-customcolor hover:cursor-pointer flex items-center justify-center space-x-2">
+               class="merchandies bg-white text-xs border-2 border-slate-400 py-1.5 px-1 w-full sm:w-32 space-x-2 lg:flex-1 lg:text-sm mb-3 text-center rounded-md hover:border-customcolor hover:cursor-pointer flex items-center justify-center space-x-2">
                <img class="max-w-4 max-h-4" src="assets/icons/merchandies-icon.png">
                <span>merchandies</span>
             </li>
